# cp

./: .gitignore  .travis.yml  README.md  demo.py  disass_test.py  requirements.txt  runtests.sh
andrzejs_garden_of_junk/: README.txt  cp_perf
cp/: .gitignore  Makefile  Pandas.ipynb  README  __init__.py  __main__.py  demo.py  disass.py  disass_test.py  dtreeview.py  elf.py  extract-current-vmlinux.sh  fakedata_shapes.csv  fullcms.py  fun_list.py  g4box.py  istateful.py  main.py  operand_info  pivot.py  play.sh  qtpandas.py  sourceme.sh  tables.py  tree_model.py  xed-ex1.cpp  xed-ex2.cpp  xed.i  xed_bb_chop.c  xed_bb_chop2.c  xed_disass.c  xed_disass.h
cp/addr2line/: addr2line.i
cp/demangle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demangle.h  demangle.i  demangle.py  demangle_wrap.c  jamroot
cp/elf/: Makefile  __init__.py  (+5 more)
csv/: _ptest1bb.csv  _ptest1dso.csv  _ptest1dso.csv.1  libCore.disas.csv  libCore.so.stat.csv
dynamorio-example/: Makefile  bbcount.cpp  run.sh
fast_addr2line/: .gitignore  Makefile  addr2line.i  fast_addr2line.cpp  fast_addr2line.h  makefile  xed-disas-elf.cpp
patches/: perf-4.7.2-libpfm-0001-AN.patch  perf-4.7.2-random-0002-AN.patch  perf-4.7.2-random-0002-TODO.patch
pin/: bblcnt.out  out.T.0.bbtrace
pin-example/: Makefile  bbcount.cpp  bbcount.out  run.sh
real_data/: bash  hydro-post  hydro-pre  libc.so.6  nfsv4.ko  pawel.fullcms  pawel.g4box.txt  vmlinux.symbols
simple-binary/: a.out  main.cpp
snippets/: xed-ex1.cpp  xed-ex2.cpp
tests/: run.sh  setup.sh  test_disass.py  test_elf.py  test_xed.py
(+373 files in other folders)
